--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,23 @@
     transform: rotate(360deg);
   }
 }
+
+.light-mode {
+  background-color: #fff;
+  color: #000;
+}
+
+/* Dark Mode Styles */
+.dark-mode {
+  background-color: #333;
+  color: #fff;
+}
+
+.container1{
+  background-color: #fff;
+  color: #000;
+} 
+.container2{
+  background-color: #282c34;
+  color: #fff;
+}
